--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -26,7 +26,9 @@
             mat-stroked-button
             color="primary"
             (click)="onGenerateResolutionNumber()"
-            [ngClass]="{ 'error-field-outlined ng-invalid': !resolutionNumberControl.valid && resolutionNumberControl.touched }"
+            [ngClass]="{
+              'error-field-outlined ng-invalid': !resolutionNumberControl.valid && resolutionNumberControl.touched
+            }"
           >
             Generate Number
           </button>
@@ -151,7 +153,8 @@
             name="isSubjectToConditions"
             (change)="onChangeSubjectToConditions($event)"
             [ngClass]="{
-              'error-field-outlined': !form.controls.isSubjectToConditions.valid && form.controls.isSubjectToConditions.touched
+              'error-field-outlined':
+                !form.controls.isSubjectToConditions.valid && form.controls.isSubjectToConditions.touched
             }"
           >
             <mat-button-toggle value="true">Yes</mat-button-toggle>
@@ -174,7 +177,8 @@
           formControlName="isStatsRequired"
           name="isStatsRequired"
           [ngClass]="{
-            'error-field-outlined ng-invalid': !form.controls.isStatsRequired.valid && form.controls.isStatsRequired.touched
+            'error-field-outlined ng-invalid':
+              !form.controls.isStatsRequired.valid && form.controls.isStatsRequired.touched
           }"
         >
           <mat-button-toggle value="true">Yes</mat-button-toggle>
@@ -187,25 +191,29 @@
         <input matInput mask="0*" formControlName="daysHideFromPublic" />
       </mat-form-field>
 
-      <mat-form-field appearance="outline" class="date-picker">
-        <mat-label>Rescinded Date</mat-label>
-        <input
-          matInput
-          (click)="rescindedDatePicker.open()"
-          [matDatepicker]="rescindedDatePicker"
-          formControlName="rescindedDate"
-          name="date"
-          [min]="minDate | startOfDay"
-        />
-        <mat-datepicker-toggle matSuffix [for]="rescindedDatePicker"></mat-datepicker-toggle>
-        <mat-datepicker #rescindedDatePicker type="date"></mat-datepicker>
-      </mat-form-field>
+      <ng-container *ngIf="form.controls.outcome.value === 'RESC'">
+        <mat-form-field appearance="outline" class="date-picker">
+          <mat-label>Rescinded Date</mat-label>
+          <input
+            matInput
+            (click)="rescindedDatePicker.open()"
+            [matDatepicker]="rescindedDatePicker"
+            formControlName="rescindedDate"
+            name="date"
+            [min]="minDate | startOfDay"
+          />
+          <mat-datepicker-toggle matSuffix [for]="rescindedDatePicker"></mat-datepicker-toggle>
+          <mat-datepicker #rescindedDatePicker type="date"></mat-datepicker>
+        </mat-form-field>
+      </ng-container>
     </div>
 
-    <mat-form-field appearance="outline" class="row">
-      <mat-label>Rescinded Comment</mat-label>
-      <input matInput formControlName="rescindedComment" />
-    </mat-form-field>
+    <ng-container *ngIf="form.controls.outcome.value === 'RESC'">
+      <mat-form-field appearance="outline" class="row">
+        <mat-label>Rescinded Comment</mat-label>
+        <input matInput formControlName="rescindedComment" />
+      </mat-form-field>
+    </ng-container>
 
     <div>
       <app-decision-documents
@@ -220,7 +228,7 @@
       [fileNumber]="fileNumber"
       [components]="components"
       (componentsChange)="onComponentChange($event)"
-      [showError]="form.touched && components.length < 1"
+      [showError]="form.touched && components.length < 1 && requireComponents"
     >
     </app-decision-components>
 
