--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title>
-  <h4>Submit Application</h4>
+  <h4>Submit Notice of Intent</h4>
 </div>
 
 <div mat-dialog-content class="content">
