--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/additional-information/roso/roso-additional-information.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/additional-information/roso/roso-additional-information.component.html
@@ -31,7 +31,7 @@
       <div>
         <mat-button-toggle-group
           class="input"
-          (valueChange)="onChangeIsRemovingSoilForNewStructure($event)"
+          (change)="onChangeIsRemovingSoilForNewStructure($event)"
           id="is-new-structure"
           [formControl]="isRemovingSoilForNewStructure"
         >
