--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/additional-information/roso/soil-removal-confirmation-dialog/soil-removal-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/additional-information/roso/soil-removal-confirmation-dialog/soil-removal-confirmation-dialog.component.html
@@ -8,7 +8,7 @@
     continue?</app-warning-banner
   >
   <div class="controls">
-    <button mat-stroked-button color="primary" (click)="onCancel()">cancel</button>
-    <button mat-flat-button color="primary" (click)="onConfirm()">confirm</button>
+    <button mat-stroked-button color="primary" [mat-dialog-close]="false">cancel</button>
+    <button mat-flat-button color="primary" [mat-dialog-close]="true">confirm</button>
   </div>
 </div>
