Add submission and validation for ROSO NOIs
* Add noi validator service
* Update confirmation dialog to new UX

--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
@@ -3,12 +3,12 @@
 </div>
 
 <div mat-dialog-content class="content">
-  <p>Your notice of intent will be submitted to the {{ data.governmentName }}.</p>
+  <p>Your notice of intent will be submitted to the ALC.</p>
   <div>
     <div class="subheading2">Terms and Conditions:</div>
     <mat-checkbox #checkbox1 color="primary" class="checkbox">
-      I/we consent to the use of the information provided in the notice of intent and all supporting documents to process the
-      notice of intent in accordance with the Agricultural Land Commission Act, the Agricultural Land Reserve General
+      I/we consent to the use of the information provided in the application and all supporting documents to process the
+      application in accordance with the Agricultural Land Commission Act, the Agricultural Land Reserve General
       Regulation, and the Agricultural Land Reserve Use Regulation.
     </mat-checkbox>
     <mat-checkbox #checkbox2 color="primary" class="checkbox">
