--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/roso-details/roso-details.component.html
@@ -163,7 +163,7 @@
       Have you submitted a Notice of Work to the Ministry of Energy, Mines and Low Carbon Innovation (EMLI)?
     </div>
     <div class="grid-double">
-      <span *ngIf="_noiSubmission.soilHasSubmittedNotice">
+      <span *ngIf="_noiSubmission.soilHasSubmittedNotice !== null">
         {{ _noiSubmission.soilHasSubmittedNotice ? 'Yes' : 'No' }}
       </span>
       <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilHasSubmittedNotice === null"></app-no-data>
