Add Proposal map to NFU Submissions
* Add to Step 6 and Step 8
* Add to ALCS

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
@@ -149,6 +149,7 @@
   <app-nfu-details
     *ngIf="submission && applicationType === 'NFUP'"
     [applicationSubmission]="submission"
+    [files]="files"
   ></app-nfu-details>
   <app-tur-details
     *ngIf="submission && applicationType === 'TURP'"
