--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
@@ -18,6 +18,14 @@
   <div class="grid-double">
     {{ applicationSubmission.nfuAgricultureSupport }}
   </div>
+  <div class="subheading2 grid-1">Proposal Map / Site Plan</div>
+  <div class="grid-double">
+    <div *ngFor="let file of proposalMap">
+      <a (click)="openFile(file)">
+        {{ file.fileName }}
+      </a>
+    </div>
+  </div>
   <div class="subheading2 grid-1">
     Do you need to import any fill to construct or conduct the proposed Non-farm use? Fill is any material brought onto
     the property, including gravel for construction.
